--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13.</p>
 
         <h2>8. Contact Us</h2>
-        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: <strong>[DAAL_DIJIYE_APNA_EMAIL]</strong></p>
+        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: <strong>vishallingayat0924@gmail.com</strong></p>
     </div>
     <footer>
         &copy; 2026 Chess Elite. All rights reserved.
