--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Chess - Official Page</title>
+    <title>OneChess Game - Official Page</title>
     <style>
         body { font-family: sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #f4f7f6; text-align: center; }
         .container { background: #fff; padding: 40px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
@@ -16,18 +16,18 @@
 <body>
     <div class="container">
         <!-- Identifying the App Name clearly for Google Verification -->
-        <h1>One Chess</h1>
+        <h1>OneChess Game</h1>
         <p>The ultimate strategic chess experience for your mobile device.</p>
         
         <div class="links">
-            <a href="https://vishal0922.github.io/chess-elite-policy/">Privacy Policy</a> | 
+            <a href="https://vishal0922.github.io/onechess-game-policy/">Privacy Policy</a> | 
             <a href="vishallingayat0924@gmail.com">Support</a>
         </div>
 
         <div class="policy-section" id="privacy">
             <h2>Privacy Policy</h2>
             <p><strong>Effective Date:</strong> January 20, 2026</p>
-            <p><strong>One Chess</strong> respects your privacy. We use Google Play Games Services for achievements and leaderboard rankings. Your game data is synchronized securely via Firebase and is deleted upon room closure. We use AdMob for advertisements.</p>
+            <p><strong>OneChess Game</strong> respects your privacy. We use Google Play Games Services for achievements and leaderboard rankings. Your game data is synchronized securely via Firebase and is deleted upon room closure. We use AdMob for advertisements.</p>
             <p>For more details or concerns, please contact our support team.</p>
         </div>
     </div>
